--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <%= stylesheet_link_tag    "style", :media => "all" %>
+    <%= csrf_meta_tag %>
 
 </head>
 <body>
